@@ -2,7 +2,6 @@ TODO LIST
 =========
 
 CLIENT
-* Change username checks to be server-sided
 * Add a nogui argument flag to ClientGUI so the jar can be run from the command prompt
   instead of having to launch the GUI-less version from a different jar/command.
 
